--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -123,7 +123,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
+EditorStartupMap=/Game/Maps/robotPusher.robotPusher
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -132,7 +132,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
+GameDefaultMap=/Game/Maps/robotPusher.robotPusher
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
@@ -348,3 +348,4 @@ FFRLevel=FFR_Medium
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/roboticBlueprints")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_VirtualRealityBP",NewGameName="/Script/roboticBlueprints")
+
