Transferring work to new laptop

--- a/roboticBlueprints.uproject
+++ b/roboticBlueprints.uproject
@@ -49,6 +49,17 @@
 				"Win64",
 				"Android"
 			]
+		},
+		{
+			"Name": "DatasmithCADImporter",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64"
+			]
+		},
+		{
+			"Name": "DatasmithImporter",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
