--- a/DefaultGame.ini
+++ b/DefaultGame.ini
@@ -1,7 +1,6 @@
-
-
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=119B5B427246D064AA2347AEEFE189FE
+ProjectID=8192C3C7794FDE0FA22B80A0D1E3E4E2
+ProjectName=Third Person BP Game Template
 
 [StartupActions]
 bAddPacks=True
