--- a/DefaultEngine.ini
+++ b/DefaultEngine.ini
@@ -1,10 +1,18 @@
-
+[URL]
+GameName=Robotic_simulation
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultServerGameMode=None
 
-
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+MinimumiOSVersion=IOS_12
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -13,6 +21,6 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Robotic_example")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Robotic_example")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Robotic_simulation")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/Robotic_simulation")
 
