--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -149,6 +149,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MoveCraneDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
 +ActionMappings=(ActionName="MoveCraneLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
 +ActionMappings=(ActionName="MoveCraneRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Right)
++ActionMappings=(ActionName="MoveCraneForward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PageUp)
++ActionMappings=(ActionName="Move Crane Backward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PageDown)
 +AxisMappings=(AxisName="GrabAxisLeft",Scale=1.000000,Key=MixedReality_Left_Grip_Click)
 +AxisMappings=(AxisName="GrabAxisLeft",Scale=1.000000,Key=OculusTouch_Left_Grip_Axis)
 +AxisMappings=(AxisName="GrabAxisLeft",Scale=1.000000,Key=ValveIndex_Left_Grip_Axis)
