--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -151,6 +151,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MoveCraneRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Right)
 +ActionMappings=(ActionName="MoveCraneForward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PageUp)
 +ActionMappings=(ActionName="Move Crane Backward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PageDown)
++ActionMappings=(ActionName="EndCableUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="EndCableDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="Dettach Item",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=End)
 +AxisMappings=(AxisName="GrabAxisLeft",Scale=1.000000,Key=MixedReality_Left_Grip_Click)
 +AxisMappings=(AxisName="GrabAxisLeft",Scale=1.000000,Key=OculusTouch_Left_Grip_Axis)
 +AxisMappings=(AxisName="GrabAxisLeft",Scale=1.000000,Key=ValveIndex_Left_Grip_Axis)
